Modified image paths.

--- a/src/pages/about-me.astro
+++ b/src/pages/about-me.astro
@@ -17,7 +17,7 @@ import GameTile from "../components/GameTile.astro";
       <h2>Currently Playing:</h2>
       <ul class="auto-grid">
         <GameTile
-          image="/src/images/minecraft.webp"
+          image="src/images/minecraft.webp"
           title="Minecraft"
           button={{
             label: "Visit Minecraft Website",
@@ -25,7 +25,7 @@ import GameTile from "../components/GameTile.astro";
           }}
         />
         <GameTile
-          image="/src/images/roblox.webp"
+          image="src/images/roblox.webp"
           title="Roblox"
           button={{
             label: "Sign up to Roblox",
@@ -33,7 +33,7 @@ import GameTile from "../components/GameTile.astro";
           }}
         />
         <GameTile
-          image="/src/images/cooking-sim.webp"
+          image="src/images/cooking-sim.webp"
           title="Cooking Simulator"
           button={{
             label: "View on Steam",
@@ -41,7 +41,7 @@ import GameTile from "../components/GameTile.astro";
           }}
         />
         <GameTile
-          image="/src/images/mini-motorways.webp"
+          image="src/images/mini-motorways.webp"
           title="Mini Motorways"
           button={{
             label: "View Game Page",
@@ -49,7 +49,7 @@ import GameTile from "../components/GameTile.astro";
           }}
         />
         <GameTile
-          image="/src/images/mini-metro.webp"
+          image="src/images/mini-metro.webp"
           title="Mini Metro"
           button={{
             label: "View Game Page",
