--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,7 +15,7 @@ const { title } = Astro.props;
     <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
-    <link rel="stylesheet" href="./styles/global.css" />
+    <link rel="stylesheet" href="/styles/global.css" />
   </head>
   <body data-theme="light">
     <slot />
