--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,6 +4,8 @@ interface Props {
 }
 
 const { title } = Astro.props;
+
+import "../styles/global.css";
 ---
 
 <!doctype html>
@@ -15,9 +17,12 @@ const { title } = Astro.props;
     <link rel="icon" type="image/svg+xml" href="./favicon.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
-    <link rel="stylesheet" href="/styles/global.css" />
   </head>
   <body data-theme="light">
-    <slot />
+    <div class="container">
+      <div class="container__content">
+        <slot />
+      </div>
+    </div>
   </body>
 </html>
