--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,11 +1,3 @@
-main {
-  margin: auto;
-  padding: 1rem;
-  width: 800px;
-  max-width: calc(100% - 2rem);
-  font-size: 20px;
-  line-height: 1.6;
-}
 [data-theme="light"] {
   --page-color: #fff;
   --text-color: #000;
@@ -67,6 +59,10 @@ h3 {
   margin-bottom: 8px;
 }
 
+hr {
+  margin-block: 1.5rem;
+}
+
 img {
   display: block;
   width: 100%;
@@ -75,7 +71,7 @@ img {
 .auto-grid {
   display: grid;
   gap: 24px;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(3, 1fr);
   list-style: none;
 }
 
@@ -100,6 +96,15 @@ img {
   border-radius: 8px;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
   overflow: hidden;
+}
+
+.tile__thumbnail {
+  aspect-ratio: 4 / 3;
+}
+
+.tile > img {
+  aspect-ratio: 4 / 3;
+  object-fit: contain;
 }
 
 .tile__description {
