Image File Path Fix

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,11 +2,11 @@
 import Layout from "../layouts/Layout.astro";
 import GameTile from "../components/GameTile.astro";
 
-import minecraftImage from "../images/minecraft.webp";
-import robloxImage from "../../src/images/roblox.webp";
-import cookingSimImage from "../../src/images/cooking-sim.webp";
-import miniMotorwaysImage from "../../src/images/mini-motorways.webp";
-import miniMetroImage from "../../src/images/mini-metro.webp";
+import minecraftImage from "../../public/images/minecraft.webp";
+import robloxImage from "../../public/images/roblox.webp";
+import cookingSimImage from "../../public/images/cooking-sim.webp";
+import miniMotorwaysImage from "../../public/images/mini-motorways.webp";
+import miniMetroImage from "../../public/images/mini-metro.webp";
 ---
 
 <Layout title="SproutGamer - About Me">
